@@ -520,7 +520,6 @@ LISPSYM(list_endtest,"LIST-ENDTEST",system)
 LISPSYM(list_fe_init,"LIST-FE-INIT",system)
 LISPSYM(list_access,"LIST-ACCESS",system)
 LISPSYM(list_access_set,"LIST-ACCESS-SET",system)
-LISPSYM(list_llength,"LIST-LLENGTH",system)
 LISPSYM(list_elt,"LIST-ELT",system)
 LISPSYM(list_set_elt,"LIST-SET-ELT",system)
 LISPSYM(list_init_start,"LIST-INIT-START",system)
