@@ -646,7 +646,6 @@ LISPFUNN(list_endtest,2)
 LISPFUNN(list_fe_init,1)
 LISPFUNN(list_access,2)
 LISPFUNN(list_access_set,3)
-LISPFUNN(list_llength,1)
 LISPFUNN(list_elt,2)
 LISPFUNN(list_set_elt,3)
 LISPFUNN(list_init_start,2)
